[package]
name = "byor_gui"
version = "0.1.0"
edition = "2024"
authors = ["Mathis Rech"]
license = "MIT"

[[example]]
name = "vello"
required-features = ["vello"]

[features]
vello = ["dep:vello"]

[dependencies]
slotmap = "1.0.7"
smallvec = { version = "1.15.1", features = ["union"] }
intmap = "3.1.2"
rapidhash = "4.1.0"
color = "0.3.2"
vello = { version = "0.6.0", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
winit = "0.30.12"
vello = "0.6.0"
pollster = "0.4.0"

[profile.dev.package."*"]
opt-level = 3
