[package]
name = "byor_gui"
version = "0.1.0"
edition = "2024"
authors = ["Mathis Rech"]
license = "MIT"

[[example]]
name = "vello"
required-features = ["vello"]

[features]
# Implements `byor_gui::rendering::Renderer` for `vello::Scene`
vello = ["dep:vello"]
# Uses a mutex instead of a thread local for font and text layout caching
unique_global_cache = []

[dependencies]
byor_gui_procmacro = { path = "./byor_gui_procmacro" }
slotmap = "1.0.7"
smallvec = { version = "1.15.1", features = ["union"] }
intmap = "3.1.2"
rapidhash = "4.1.0"
modular-bitfield = "0.12.0"
bitflags = "2.9.4"
smallbox = "0.8.8"
parley = "0.6.0"
vello = { version = "0.6.0", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
winit = "0.30.12"
vello = "0.6.0"
pollster = "0.4.0"

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "byor_gui_procmacro",
]
